--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8084
 logging.file.name=online-adv.log
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Online-advdb
+spring.datasource.username=postgres
+spring.datasource.password=Pooja123
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
