--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8084
 logging.file.name=online-adv.log
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Online-advdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/dvdrental
 spring.datasource.username=postgres
 spring.datasource.password=Pooja123
 spring.datasource.driverClassName=org.postgresql.Driver
