--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.file.name=online-adv.log
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dvdrental
 spring.datasource.username=postgres
-spring.datasource.password=Pooja123
+spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
