--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,14 @@
 server.port=8084
 
-#logging.file.name=cg-app.log
+#logging.file.name=adv-app.log
 
-#spring.security.user.name=vaman
-#spring.security.user.password=vaman
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Online_advdb
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=@ShP6971
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
-#mongo db connectivity 
-#This is a comment. 
-#spring.security.user=vaman
-#spring.security.password=vaman
+
