--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8084
 
-#logging.file.name=adv-app.log
+logging.file.name=adv-app.log
 
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Online_advdb
 spring.datasource.username=postgres
-spring.datasource.password=@ShP6971
+spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
